Versão pós alinhamento com cliente - Linguagem convertida para EUA

--- a/src/components/notification.module.css
+++ b/src/components/notification.module.css
@@ -39,7 +39,8 @@
   bottom: 1vw;
   right: 2vw;
   font-size: 12px;
-  background-color: rgb(247, 5, 5);
+  /* background-color: rgb(247, 5, 5); */
+  background-color: rgb(6, 92, 172);
   color: white;
   padding-top: 1vw;
   padding-bottom: 1vw;
