--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,3 +1,34 @@
+@keyframes error {
+  0% {
+    border: 1px solid #d0d0d0;
+  }
+
+  25% {
+    border: 1px solid red;
+    transform: translateY(-5px);
+  }
+
+  30% {
+    border: 1px solid red;
+    transform: translateY(5px);
+    background-color: red;
+  }
+
+  45% {
+    border: 1px solid red;
+    transform: translateY(-5px);
+  }
+
+  60% {
+    border: 1px solid red;
+    transform: translateY(5px);
+  }
+
+  100% {
+    border: 1px solid #d0d0d0;
+  }
+}
+
 /* Container geral */
 .painelContainer {
   max-width: 900px;
@@ -5,6 +36,7 @@
   padding: 40px 20px;
   font-family: Arial, Helvetica, sans-serif;
   color: #222;
+  font-family: "Delius", cursive;
 }
 
 /* Título principal */
@@ -64,6 +96,10 @@
   outline: none;
 }
 
+.inputSelect option {
+  background-color: #d0d0d04b;
+}
+
 /* Checkbox */
 .checkboxGroup {
   display: flex;
@@ -71,6 +107,10 @@
   gap: 12px;
   justify-content: center;
   text-align: center;
+  width: 60%;
+  margin: auto;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.233);
+  border-radius: 5px;
 }
 
 .checkboxItem {
@@ -78,6 +118,11 @@
   align-items: center;
   gap: 6px;
   cursor: pointer;
+}
+
+.checkboxItem p {
+  border: 1px solid red;
+  background-color: red;
 }
 
 /* Instrumentos */
@@ -140,18 +185,43 @@
 
 .btnAdicionar:hover {
   background: #3a5dca;
+  cursor: pointer;
 }
 
 .btnAdicionar:nth-child(3):hover {
   background: #c9a711;
+  cursor: pointer;
 }
 
-/* Botão principal */
+/* Botões Gerar e Limpar */
+
+.d_buttons {
+  display: flex;
+  width: 80%;
+  margin: auto;
+}
+
 .btnGerar {
   margin-top: 10px;
+  margin: 1vw;
   width: 100%;
   padding: 14px;
   background: #1cc88a;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.btnClear {
+  margin-top: 10px;
+  margin: 1vw;
+  width: 100%;
+  padding: 14px;
+  background: #c9a711;
   color: white;
   border: none;
   border-radius: 8px;
@@ -196,36 +266,12 @@
   width: 50%;
 }
 
-@keyframes error {
-  0% {
-    border: 1px solid #d0d0d0;
-  }
-
-  25% {
-    border: 1px solid red;
-    transform: translateY(-5px);
-  }
-
-  30% {
-    border: 1px solid red;
-    transform: translateY(5px);
-  }
-
-  45% {
-    border: 1px solid red;
-    transform: translateY(-5px);
-  }
-
-  60% {
-    border: 1px solid red;
-    transform: translateY(5px);
-  }
-
-  100% {
-    border: 1px solid #d0d0d0;
-  }
-}
-
 .failure {
-  animation: error 2s ease-in;
+  animation: error 3s linear ease-in;
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ff0000;
+  font-size: 16px;
+  transition: 0.2s ease;
 }
