--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -31,12 +31,20 @@
 
 /* Container geral */
 .painelContainer {
-  max-width: 900px;
+  /* max-width: 900px; */
+  width: 100%;
   margin: auto;
-  padding: 40px 20px;
+  /* padding: 40px 20px; */
   font-family: Arial, Helvetica, sans-serif;
   color: #222;
   font-family: "Delius", cursive;
+  background: rgba(15, 23, 42, 0.85);
+  background-image: url("/public/walpaper.png");
+  background-size: cover; /* cover | contain | auto */
+  background-repeat: no-repeat; /* no-repeat | repeat */
+  background-position: center; /* center | top | bottom | left | right */
+  /* background-image: linear-gradient(135deg, #0f2027, #203a43, #196d91); */
+  padding-bottom: 2vw;
 }
 
 /* Título principal */
@@ -44,17 +52,27 @@
   text-align: center;
   font-size: 32px;
   font-weight: 700;
-  margin-bottom: 40px;
+  margin: 0;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  color: white;
 }
 
 /* Cards */
 .cardFiltros,
 .cardPrompt {
+  max-width: 900px;
+  margin: auto;
   background: #ffffff;
   padding: 25px;
   border-radius: 12px;
   margin-bottom: 30px;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.281);
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.76);
+}
+
+.cardPrompt {
+  margin-bottom: 0;
+  padding-bottom: 2vw;
 }
 
 /* Título da seção */
@@ -68,6 +86,11 @@
 .filtroItem {
   margin-bottom: 25px;
 }
+
+/* .filtroItemEfeito{
+  background-image: linear-gradient(135deg, #0f2027, #203a43, #196d91);
+  margin-bottom: 25px;
+} */
 
 .filtroItem label {
   display: block;
@@ -107,10 +130,12 @@
   gap: 12px;
   justify-content: center;
   text-align: center;
-  width: 60%;
+  width: 70%;
   margin: auto;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.233);
   border-radius: 5px;
+  background-image: linear-gradient(135deg, #0d0320, #200257, #0d0320);
+  color: white;
 }
 
 .checkboxItem {
@@ -207,6 +232,7 @@
   width: 100%;
   padding: 14px;
   background: #1cc88a;
+  box-shadow: 0 0 22px rgba(34, 197, 94, 0.6);
   color: white;
   border: none;
   border-radius: 8px;
@@ -222,6 +248,7 @@
   width: 100%;
   padding: 14px;
   background: #c9a711;
+  box-shadow: 0 0 22px rgba(250, 204, 21, 0.6);
   color: white;
   border: none;
   border-radius: 8px;
@@ -233,6 +260,10 @@
 
 .btnGerar:hover {
   background: #17a673;
+}
+
+.btnClear:hover {
+  background: #dae904;
 }
 
 /* Área do prompt */
@@ -252,26 +283,30 @@
 }
 
 .timeMusic {
-  width: 20%;
-  padding: 10px;
-  border-radius: 6px;
-  border: 1px solid #d0d0d0;
-  font-size: 16px;
-  transition: 0.2s ease;
-  color: #274fc7;
-  font-weight: 600;
+  width: 30%;
+  /* width: 100%; */
+  padding: 16px;
+  border-radius: 12px;
+  /* background: rgba(15, 23, 42, 0.85); */
+    background-image: linear-gradient(135deg, #0d0320, #200257, #0d0320);
+  border: 1px solid rgba(148, 163, 184, 0.3);
+  color: #e5e7eb;
 }
 
 .timeMusic input {
-  width: 50%;
+  margin-top: 2vw;
+  width: 70%;
 }
 
 .failure {
-  animation: error 3s linear ease-in;
   width: 100%;
   padding: 10px;
   border-radius: 6px;
   border: 1px solid #ff0000;
   font-size: 16px;
   transition: 0.2s ease;
+
+  animation: error 0.6s ease-in-out;
+  border-color: #ef4444 !important;
+  box-shadow: 0 0 18px rgba(239, 68, 68, 0.7);
 }
